Fix overflow scroll on right sidebar

--- a/css/components/_blog-index.styl
+++ b/css/components/_blog-index.styl
@@ -47,6 +47,7 @@
   }
 
   .right {
+    overflow-y: auto;
     h2 {
       padding-bottom: 20px;
       border-bottom: 2px solid $lightestGray;
